hphp/test/slow/modules/module_level_traits_internal_01.php.expectf
Fatal error: Uncaught exception 'ModuleBoundaryViolationException' with message 'Accessing internal method C::foo in module MLT_A from the default module is not allowed' in %s/module_level_traits_internal_01.php:11
Stack trace:
%A
